# lemmy-api-compat

./: Cargo.toml  README.md
src/: main.rs
